apps/base/firefly/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: firefly
  labels:
    app.kubernetes.io/part-of: firefly
