apps/base/firefly/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: firefly
  namespace: firefly
spec:
  parentRefs:
  - name: internal-gateway
    namespace: gateway-system
    sectionName: https

  hostnames:
    - firefly.tmatthews.casa

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: firefly
          kind: Service
          port: 80
